<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@android:color/transparent"
    >
    <View
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_6sdp"
        android:background="@drawable/btn_corner"
        android:backgroundTint="@color/gray"
        android:layout_marginTop="@dimen/_8sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/selct_price_ranege"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_16ssp"
        android:fontFamily="@font/font_manrope_medium"
        android:text="@string/str_select_price_range"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_36sdp"

        />


    <SeekBar
        android:id="@+id/seekbar"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_margin="26dp"
        android:thumb="@drawable/seekbar_thumb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selct_price_ranege" />

    <TextView
        android:id="@+id/textViewStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/str_starting_price"
        android:textSize="@dimen/_14ssp"
        android:fontFamily="@font/font_manrope_medium"
        app:layout_constraintStart_toStartOf="@id/seekbar"
        app:layout_constraintTop_toBottomOf="@id/seekbar" />

    <TextView
        android:id="@+id/textViewEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:textSize="@dimen/_14ssp"
        android:fontFamily="@font/font_manrope_medium"
        android:text="@string/str_end_price"
        app:layout_constraintEnd_toEndOf="@+id/seekbar"
        app:layout_constraintTop_toBottomOf="@+id/seekbar" />

    <Button
        android:id="@+id/btn_applay_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_26sdp"
        android:padding="@dimen/_12sdp"
        android:text="@string/str_apply_filter"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewStart" />


</androidx.constraintlayout.widget.ConstraintLayout>