<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        app:cardCornerRadius="@dimen/_6sdp"
        android:padding="@dimen/_4sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_itemName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/font_manrope_bold"
                android:text="@string/str_iphone_14_pro"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/logo"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_22sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:fontFamily="@font/font_manrope_bold"
                android:padding="@dimen/_2sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/amazonlogo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/font_manrope_regular"
                android:text="@string/str_price"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintStart_toStartOf="@id/tv_itemName"
                app:layout_constraintTop_toBottomOf="@+id/tv_itemName" />

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:fontFamily="@font/font_manrope_bold"
                android:text="@string/str_sar_1180"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="@+id/textview"
                app:layout_constraintStart_toEndOf="@+id/textview"
                app:layout_constraintTop_toTopOf="@id/textview" />

            <TextView
                android:id="@+id/textview_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:fontFamily="@font/font_manrope_regular"
                android:text="@string/str_location_type"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintStart_toStartOf="@id/textview"
                app:layout_constraintTop_toBottomOf="@id/tv_price" />


            <TextView
                android:id="@+id/tv_local"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:fontFamily="@font/font_manrope_bold"
                android:text="@string/str_local"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="@+id/textview_location"
                app:layout_constraintStart_toEndOf="@+id/textview_location"
                app:layout_constraintTop_toTopOf="@+id/textview_location" />

            <TextView
                android:id="@+id/nearest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:fontFamily="@font/font_manrope_regular"
                android:text="@string/str_nearest"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintStart_toStartOf="@+id/textview_location"
                app:layout_constraintTop_toBottomOf="@+id/textview_location" />

            <TextView
                android:id="@+id/tv_nearest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:fontFamily="@font/font_manrope_bold"
                android:text="NO"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="@+id/nearest"
                app:layout_constraintStart_toEndOf="@+id/nearest"
                app:layout_constraintTop_toTopOf="@+id/nearest" />


            <TextView
                android:id="@+id/tv_reviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_marginBottom="@dimen/_6sdp"
                android:text="@string/str_reviews"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/nearest"
                app:layout_constraintTop_toBottomOf="@+id/nearest" />

            <RatingBar
                android:id="@+id/rating"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:rating="4"
                android:theme="@style/RatingBar"
                app:layout_constraintBottom_toBottomOf="@+id/tv_reviews"
                app:layout_constraintStart_toEndOf="@+id/tv_reviews"
                app:layout_constraintTop_toTopOf="@+id/tv_reviews" />

            <TextView
                android:id="@+id/tv_total_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:text="@string/str_rating"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="@+id/rating"
                app:layout_constraintStart_toEndOf="@+id/rating"
                app:layout_constraintTop_toTopOf="@+id/rating" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="12-12-2023"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_total_rating"
                app:layout_constraintEnd_toEndOf="@+id/logo"
                app:layout_constraintTop_toTopOf="@+id/tv_total_rating" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>