<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".SignUpActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/singup_logo"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_100sdp"
            android:scaleType="centerCrop"
            android:layout_marginTop="@dimen/_16sdp"
            android:src="@drawable/qaaren_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_name"
            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_22sdp"
            android:layout_marginEnd="@dimen/_22sdp"
            android:layout_marginTop="@dimen/_16sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/singup_logo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:fontFamily="sans-serif"
                android:hint="@string/str_name"
                android:textColor="@color/black"
                android:textColorHighlight="@color/black"
                android:textColorHint="@color/black" />


        </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_22sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_22sdp"
                app:layout_constraintEnd_toEndOf="@+id/layout_name"
                app:layout_constraintStart_toStartOf="@+id/layout_name"
                app:layout_constraintTop_toBottomOf="@+id/layout_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/ebrima_regular"
                    android:hint="@string/str_email"
                    android:textColorHint="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_22sdp"
            app:passwordToggleEnabled="true"
            android:layout_marginEnd="@dimen/_22sdp"
            app:layout_constraintEnd_toEndOf="@+id/layout_email"
            app:layout_constraintStart_toStartOf="@+id/layout_email"
            app:layout_constraintTop_toBottomOf="@+id/layout_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:fontFamily="@font/ebrima_regular"
                android:hint="@string/str_password"
                android:inputType="textPassword"
                android:textColorHint="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_conpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_22sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_22sdp"
                app:passwordToggleEnabled="true"
                app:layout_constraintEnd_toEndOf="@+id/layout_password"
                app:layout_constraintStart_toStartOf="@+id/layout_password"
                app:layout_constraintTop_toBottomOf="@+id/layout_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_conferPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/ebrima_regular"
                    android:hint="@string/str_confirmPassword"
                    android:inputType="textPassword"
                    android:textColorHint="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_signup"
            android:layout_width="0dp"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="60dp"
            android:drawablePadding="@dimen/_8sdp"
            android:text="@string/str_signup"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            app:cornerRadius="@dimen/_8sdp"
            app:layout_constraintEnd_toEndOf="@+id/layout_conpassword"
            app:layout_constraintStart_toStartOf="@+id/layout_conpassword"
            app:layout_constraintTop_toBottomOf="@+id/layout_conpassword" />

        <TextView
            android:id="@+id/tv_alreadyhaveaccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_12ssp"
            android:text="@string/str_alreadyhaveAccount"
            app:layout_constraintTop_toBottomOf="@id/btn_signup"
            app:layout_constraintStart_toStartOf="@id/btn_signup"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginStart="@dimen/_42sdp"
            />
        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/str_login"
            android:layout_marginStart="@dimen/_6sdp"
            app:layout_constraintTop_toTopOf="@id/tv_alreadyhaveaccount"
            app:layout_constraintStart_toEndOf="@id/tv_alreadyhaveaccount"
            app:layout_constraintBottom_toBottomOf="@id/tv_alreadyhaveaccount"
            />






        </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>