<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_6sdp"
    android:layout_marginBottom="@dimen/_6sdp">


    <androidx.cardview.widget.CardView
        android:id="@+id/detailcardView"
        android:layout_width="@dimen/_140sdp"
        android:layout_height="@dimen/_230sdp"
        app:cardCornerRadius="@dimen/_6sdp"
        android:layout_margin="@dimen/_4sdp"
        android:elevation="@dimen/_4sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            >

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/_70sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/iphone_image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RatingBar
                android:id="@+id/rating"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:rating="4"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginStart="@dimen/_8sdp"
                app:layout_constraintEnd_toStartOf="@id/textView_rating"
                android:theme="@style/RatingBar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:id="@+id/textView_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:text="@string/str_rating"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="@+id/rating"
                app:layout_constraintStart_toEndOf="@+id/rating"
                app:layout_constraintTop_toTopOf="@+id/rating" />

            <TextView
                android:id="@+id/tv_percent"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_15sdp"
                android:text="20 %"
                android:background="@drawable/round_corner_shape"
                android:backgroundTint="@color/red"
                android:textAlignment="center"
                android:gravity="center"
                android:textColor="@color/white"
                android:paddingBottom="@dimen/_2sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_margin="@dimen/_6sdp"/>


            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:background="@drawable/circle_background"
                android:src="@drawable/like"
                android:scaleType="centerInside"
                android:padding="@dimen/_10sdp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />



            <TextView
                android:id="@+id/tv_productName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_productName"
                app:layout_constraintTop_toBottomOf="@id/rating"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginStart="@dimen/_8sdp"
                app:layout_constraintStart_toStartOf="parent"
                android:fontFamily="@font/font_manrope_bold"
                android:textColor="@color/black"
                />

            <TextView
                android:id="@+id/textview_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_manrope_regular"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_6sdp"
                android:text="@string/str_price"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_productName" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/textview_price"
                app:layout_constraintStart_toEndOf="@id/textview_price"
                app:layout_constraintBottom_toBottomOf="@id/textview_price"
                android:text="@string/str_startTo_endprice"
                android:layout_marginBottom="@dimen/_2sdp"
                android:layout_marginStart="@dimen/_4sdp"
                android:id="@+id/tv_starttoendprice"/>



        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>